kubernetes/_base/miscellaneous/excalidraw/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: misc
  labels:
    goldilocks.fairwinds.com/enabled: "true"
