kubernetes/_base/miscellaneous/excalidraw/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: excalidraw
  namespace: misc
spec:
  selector:
    app: excalidraw
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: excalidraw-backend
  namespace: misc
spec:
  selector:
    app: excalidraw
  ports:
    - name: backend
      protocol: TCP
      port: 8080
      targetPort: 8080
